--- a/index.html
+++ b/index.html
@@ -205,15 +205,7 @@
         .service-card__heading {
             display: flex;
             flex-direction: column;
-            gap: 10px;
-        }
-
-        .service-card__eyebrow {
-            font-size: 13px;
-            letter-spacing: 0.14em;
-            text-transform: uppercase;
-            font-weight: 600;
-            color: var(--color-muted);
+            gap: 6px;
         }
 
         .service-card__title {
@@ -337,12 +329,16 @@
             color: #ffffff;
         }
 
-        .service-card--feature .service-card__eyebrow,
         .service-card--feature .service-card__body,
         .service-card--feature .metric__label,
         .service-card--feature .testimonial,
         .service-card--feature .testimonial__author {
             color: rgba(255, 255, 255, 0.85);
+        }
+
+        .service-card--feature .metric__context,
+        .service-card--feature .service-card__note strong {
+            color: #ffffff;
         }
 
         .service-card--feature .testimonial {
@@ -413,6 +409,7 @@
         .about__text {
             display: grid;
             gap: 20px;
+            max-width: 52ch;
         }
 
         .about__text p {
@@ -493,6 +490,17 @@
             background: #ffffff;
         }
 
+        .hero__cta {
+            opacity: 0;
+            transform: translateY(12px);
+            transition: opacity 0.45s ease 0.25s, transform 0.45s ease 0.25s;
+        }
+
+        .fade-block.is-visible .hero__cta {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
         .fade-block {
             opacity: 0;
             transform: translateY(20px);
@@ -533,6 +541,7 @@
 
             .service-card__header {
                 flex-direction: column;
+                align-items: flex-start;
             }
 
             .service-card__layout {
@@ -564,7 +573,7 @@
     <main id="top">
         <section class="hero container fade-block" aria-labelledby="hero-title">
             <h1 class="hero__title" id="hero-title">YouTube business solutions, from industry veterans.</h1>
-            <a class="button button--primary" href="https://calendly.com/your-link" target="_blank" rel="noopener">Book a discovery call</a>
+            <a class="button button--primary hero__cta" href="https://calendly.com/your-link" target="_blank" rel="noopener">Book a discovery call</a>
         </section>
 
         <section class="section fade-block" id="services" aria-labelledby="services-title">
@@ -578,7 +587,6 @@
                         <div class="service-card__header">
                             <div class="service-card__icon" aria-hidden="true">🧭</div>
                             <div class="service-card__heading">
-                                <span class="service-card__eyebrow">Strategy Success</span>
                                 <h3 class="service-card__title">Strategy Call</h3>
                             </div>
                         </div>
@@ -615,7 +623,6 @@
                         <div class="service-card__header">
                             <div class="service-card__icon" aria-hidden="true">📊</div>
                             <div class="service-card__heading">
-                                <span class="service-card__eyebrow">Audit Results</span>
                                 <h3 class="service-card__title">Data-backed Niche and Channel Audit</h3>
                             </div>
                         </div>
@@ -647,7 +654,6 @@
                         <div class="service-card__header">
                             <div class="service-card__icon" aria-hidden="true">🎬</div>
                             <div class="service-card__heading">
-                                <span class="service-card__eyebrow">Done-for-you Production</span>
                                 <h3 class="service-card__title">Done-for-you Solutions: Business</h3>
                             </div>
                         </div>
