Refine homepage visuals and interactions

--- a/index.html
+++ b/index.html
@@ -97,18 +97,57 @@
         }
 
         .hero {
-            padding: clamp(160px, 22vh, 220px) 0 132px;
+            position: relative;
+            padding: clamp(180px, 24vh, 240px) 0 clamp(140px, 20vh, 180px);
             display: grid;
-            gap: clamp(44px, 6vw, 72px);
+            gap: clamp(32px, 4vw, 52px);
             justify-items: start;
+            isolation: isolate;
+        }
+
+        .hero::before {
+            content: "";
+            position: absolute;
+            inset: clamp(32px, 6vw, 64px) clamp(-24px, -6vw, -48px) auto clamp(-24px, -6vw, -48px);
+            height: clamp(340px, 38vh, 420px);
+            background: radial-gradient(circle at top left, rgba(15, 111, 236, 0.14), transparent 60%),
+                        radial-gradient(circle at bottom right, rgba(13, 93, 222, 0.18), transparent 65%);
+            filter: blur(0.5px);
+            z-index: -2;
+        }
+
+        .hero::after {
+            content: "";
+            position: absolute;
+            inset: clamp(40px, 7vw, 80px) clamp(12px, 9vw, 120px) auto auto;
+            width: clamp(180px, 26vw, 280px);
+            height: clamp(180px, 26vw, 280px);
+            border-radius: 38% 62% 58% 42% / 45% 40% 60% 55%;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.65), rgba(15, 111, 236, 0.16));
+            box-shadow: 0 34px 80px rgba(15, 111, 236, 0.16);
+            z-index: -1;
+            opacity: 0.75;
         }
 
         .hero__title {
-            font-size: clamp(3.5rem, 8vw, 5rem);
+            font-size: clamp(3.75rem, 7.8vw, 5.6rem);
             font-weight: 700;
             letter-spacing: -0.04em;
             line-height: 1.08;
             margin: 0;
+        }
+
+        .hero__subtitle {
+            margin: 0;
+            max-width: 52ch;
+            font-size: clamp(1.1rem, 2.4vw, 1.35rem);
+            color: rgba(17, 18, 22, 0.76);
+        }
+
+        .hero__cta-group {
+            display: flex;
+            gap: 18px;
+            align-items: center;
         }
 
         .button {
@@ -139,25 +178,52 @@
         }
 
         .button--primary {
-            background: var(--color-accent);
+            background: linear-gradient(135deg, var(--color-accent), #1877f2);
             color: #ffffff;
             box-shadow: 0 14px 28px rgba(15, 111, 236, 0.18);
+            position: relative;
+            gap: 8px;
         }
 
         .button--primary:hover,
         .button--primary:focus-visible {
-            background: var(--color-accent-strong);
+            background: linear-gradient(135deg, var(--color-accent-strong), #0c52c7);
             transform: translateY(-1px);
             box-shadow: 0 16px 28px rgba(12, 84, 176, 0.28);
         }
 
+        .button--primary::after {
+            content: "\2197";
+            font-size: 16px;
+            line-height: 1;
+            transition: transform 0.25s ease;
+        }
+
+        .button--primary:hover::after,
+        .button--primary:focus-visible::after {
+            transform: translate3d(2px, -2px, 0);
+        }
+
         .section {
             padding: 88px 0;
+            position: relative;
+        }
+
+        .section + .section::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: min(860px, 82vw);
+            height: 1px;
+            background: rgba(17, 18, 22, 0.08);
         }
 
         .section__header {
             max-width: 720px;
             margin-bottom: 48px;
+            text-align: left;
         }
 
         .section__title {
@@ -175,7 +241,7 @@
 
         .services-list {
             display: grid;
-            gap: 48px;
+            gap: clamp(40px, 5vw, 56px);
         }
 
         .service-card {
@@ -185,6 +251,14 @@
             padding: clamp(32px, 5vw, 48px);
             display: grid;
             gap: clamp(28px, 4vw, 40px);
+            box-shadow: 0 18px 42px rgba(17, 18, 22, 0.06);
+            transition: transform 0.35s ease, box-shadow 0.35s ease;
+        }
+
+        .service-card:hover,
+        .service-card:focus-within {
+            transform: translateY(-6px);
+            box-shadow: 0 24px 52px rgba(17, 18, 22, 0.12);
         }
 
         .service-card__header {
@@ -194,13 +268,15 @@
         }
 
         .service-card__icon {
-            width: 60px;
-            height: 60px;
-            border-radius: 18px;
-            background: rgba(15, 111, 236, 0.1);
+            width: 64px;
+            height: 64px;
+            border-radius: 22px;
+            background: linear-gradient(140deg, rgba(15, 111, 236, 0.16), rgba(13, 93, 222, 0.06));
             display: grid;
             place-items: center;
-            font-size: 28px;
+            font-size: 30px;
+            color: var(--color-accent);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.45), 0 10px 24px rgba(15, 111, 236, 0.15);
         }
 
         .service-card__heading {
@@ -211,7 +287,7 @@
 
         .service-card__title {
             margin: 0;
-            font-size: clamp(2.4rem, 3.6vw, 3.25rem);
+            font-size: clamp(2.1rem, 3.2vw, 2.6rem);
             letter-spacing: -0.03em;
             font-weight: 700;
             line-height: 1.1;
@@ -250,21 +326,21 @@
 
         .service-card__details {
             display: grid;
-            gap: 24px;
+            gap: clamp(24px, 3vw, 32px);
         }
 
         .metric-list {
             display: grid;
-            gap: 18px;
+            gap: 22px;
         }
 
         .metric {
             display: grid;
-            gap: 6px;
+            gap: 10px;
         }
 
         .metric__label {
-            font-size: 13px;
+            font-size: 12px;
             font-weight: 600;
             letter-spacing: 0.12em;
             text-transform: uppercase;
@@ -272,23 +348,25 @@
         }
 
         .metric__value {
-            font-size: clamp(2.2rem, 2.6vw, 2.8rem);
-            font-weight: 700;
-            letter-spacing: -0.03em;
+            font-size: clamp(3rem, 4vw, 4rem);
+            font-weight: 750;
+            letter-spacing: -0.04em;
             color: var(--color-accent);
+            text-shadow: 0 8px 24px rgba(15, 111, 236, 0.18);
         }
 
         .metric__context {
             font-size: 15px;
-            color: var(--color-text);
+            color: rgba(17, 18, 22, 0.78);
         }
 
         .testimonial {
-            background: rgba(17, 18, 22, 0.06);
+            background: rgba(17, 18, 22, 0.05);
             border-radius: 22px;
-            padding: 24px;
+            padding: 26px;
             display: grid;
             gap: 12px;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.28), 0 18px 32px rgba(17, 18, 22, 0.06);
         }
 
         .testimonial__quote {
@@ -319,15 +397,16 @@
         }
 
         .service-card--feature {
-            background: #0f6fec;
+            background: linear-gradient(150deg, #0d5dde, #0b4fbf);
             border: none;
-            box-shadow: 0 26px 52px rgba(15, 111, 236, 0.25);
+            box-shadow: 0 36px 68px rgba(10, 70, 166, 0.3);
             color: #ffffff;
         }
 
         .service-card--feature .service-card__icon {
             background: rgba(255, 255, 255, 0.16);
             color: #ffffff;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4);
         }
 
         .service-card--feature .service-card__body,
@@ -343,11 +422,14 @@
         }
 
         .service-card--feature .testimonial {
-            background: rgba(255, 255, 255, 0.16);
+            background: rgba(5, 27, 82, 0.42);
+            border: 1px solid rgba(255, 255, 255, 0.14);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.22);
         }
 
         .service-card--feature .metric__value {
             color: #ffffff;
+            text-shadow: 0 14px 32px rgba(5, 27, 82, 0.42);
         }
 
         .service-card--feature .service-card__lead {
@@ -370,8 +452,10 @@
         }
 
         .service-card--feature .service-card__note {
-            background: rgba(255, 255, 255, 0.16);
+            background: rgba(5, 27, 82, 0.38);
             color: #ffffff;
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.18);
         }
 
         .service-card__note {
@@ -386,24 +470,29 @@
 
 
         .about {
-            background: linear-gradient(160deg, rgba(255, 255, 255, 0.86), #e9edf3);
+            background: linear-gradient(160deg, rgba(255, 255, 255, 0.94), #e2e8f3);
+        }
+
+        .about .section__header {
+            margin-bottom: clamp(36px, 6vw, 64px);
         }
 
         .about__content {
             display: grid;
             gap: clamp(32px, 5vw, 48px);
             align-items: start;
-            grid-template-columns: minmax(0, clamp(220px, 30vw, 320px)) minmax(0, 1fr);
+            grid-template-columns: minmax(0, clamp(260px, 32vw, 360px)) minmax(0, 1fr);
         }
 
         .about__image {
-            width: clamp(220px, 30vw, 320px);
+            width: clamp(260px, 32vw, 360px);
             aspect-ratio: 1 / 1;
-            border-radius: 32px;
-            background: rgba(15, 111, 236, 0.08);
+            border-radius: 36px;
+            background: linear-gradient(145deg, rgba(15, 111, 236, 0.12), rgba(255, 255, 255, 0.8));
             display: grid;
             place-items: center;
             overflow: hidden;
+            box-shadow: 0 28px 60px rgba(15, 111, 236, 0.18);
         }
 
         .about__image img {
@@ -414,7 +503,7 @@
 
         .about__text {
             display: grid;
-            gap: 20px;
+            gap: 22px;
             max-width: 60ch;
         }
 
@@ -441,7 +530,7 @@
         }
 
         .contact {
-            background: var(--color-surface);
+            background: linear-gradient(180deg, rgba(236, 239, 243, 0.55), #ffffff 60%);
         }
 
         .contact__grid {
@@ -452,10 +541,11 @@
         }
 
         .contact__form-wrapper {
-            background: rgba(17, 18, 22, 0.04);
-            border-radius: 24px;
-            padding: 36px;
-            border: 1px solid rgba(17, 18, 22, 0.06);
+            background: rgba(255, 255, 255, 0.92);
+            border-radius: 28px;
+            padding: clamp(32px, 5vw, 48px);
+            border: 1px solid rgba(17, 18, 22, 0.08);
+            box-shadow: 0 32px 68px rgba(17, 18, 22, 0.1);
         }
 
         form {
@@ -477,12 +567,12 @@
         input,
         textarea {
             padding: 14px 16px;
-            border-radius: 12px;
-            border: 1px solid var(--color-border);
+            border-radius: 14px;
+            border: 1px solid rgba(17, 18, 22, 0.12);
             font: 15px var(--font-sans);
             color: var(--color-text);
             background: #ffffff;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
         }
 
         input:focus,
@@ -490,11 +580,23 @@
             outline: none;
             border-color: var(--color-accent);
             box-shadow: 0 0 0 3px rgba(15, 111, 236, 0.12);
+            transform: translateY(-1px);
         }
 
         textarea {
             min-height: 150px;
             resize: vertical;
+        }
+
+        .section--centered .section__header {
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .section--centered .section__description {
+            margin-left: auto;
+            margin-right: auto;
         }
 
         footer {
@@ -534,11 +636,16 @@
             }
 
             .hero {
-                padding: 128px 0 88px;
+                padding: 140px 0 96px;
             }
 
             .hero__title {
                 font-size: clamp(2.75rem, 10vw, 3.6rem);
+            }
+
+            .hero__cta-group {
+                flex-direction: column;
+                align-items: flex-start;
             }
 
             .section {
@@ -549,6 +656,7 @@
                 width: 52px;
                 height: 52px;
                 font-size: 24px;
+                border-radius: 18px;
             }
 
             .service-card__title {
@@ -589,7 +697,11 @@
     <main id="top">
         <section class="hero container fade-block" aria-labelledby="hero-title">
             <h1 class="hero__title" id="hero-title">YouTube business solutions, from industry veterans.</h1>
-            <a class="button button--primary hero__cta" href="https://calendly.com/your-link" target="_blank" rel="noopener">Book a discovery call</a>
+            <p class="hero__subtitle">We partner with creators and companies to shape premium content engines—grounded in data, refined by storytelling, and built to scale sustainably.</p>
+            <div class="hero__cta-group hero__cta">
+                <a class="button button--primary" href="https://calendly.com/your-link" target="_blank" rel="noopener">Book a discovery call</a>
+                <a class="button button--ghost" href="#services">Explore services</a>
+            </div>
         </section>
 
         <section class="section fade-block" id="services" aria-labelledby="services-title">
@@ -733,7 +845,7 @@
             </div>
         </section>
 
-        <section class="section contact fade-block" id="contact" aria-labelledby="contact-title">
+        <section class="section section--centered contact fade-block" id="contact" aria-labelledby="contact-title">
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title" id="contact-title">Let’s build your next chapter</h2>
