--- a/index.html
+++ b/index.html
@@ -97,18 +97,45 @@
         }
 
         .hero {
-            padding: clamp(160px, 22vh, 220px) 0 132px;
+            position: relative;
+            isolation: isolate;
+            padding: clamp(180px, 24vh, 240px) 0 clamp(140px, 20vh, 200px);
             display: grid;
             gap: clamp(44px, 6vw, 72px);
             justify-items: start;
+            overflow: hidden;
+        }
+
+        .hero::before {
+            content: "";
+            position: absolute;
+            top: clamp(-220px, -12vh, -120px);
+            right: clamp(-260px, -18vw, -140px);
+            width: clamp(480px, 58vw, 720px);
+            aspect-ratio: 1;
+            background: radial-gradient(circle at center, rgba(15, 111, 236, 0.18) 0%, rgba(15, 111, 236, 0) 70%);
+            z-index: -1;
+        }
+
+        .hero::after {
+            content: "";
+            position: absolute;
+            bottom: clamp(-180px, -12vh, -60px);
+            left: clamp(-220px, -16vw, -120px);
+            width: clamp(360px, 42vw, 520px);
+            height: clamp(360px, 42vw, 520px);
+            background: radial-gradient(circle at top right, rgba(15, 111, 236, 0.12) 0%, rgba(15, 111, 236, 0) 65%);
+            filter: blur(0.5px);
+            z-index: -1;
         }
 
         .hero__title {
-            font-size: clamp(3.5rem, 8vw, 5rem);
+            font-size: clamp(4rem, 9vw, 5.75rem);
             font-weight: 700;
             letter-spacing: -0.04em;
             line-height: 1.08;
             margin: 0;
+            max-width: 16ch;
         }
 
         .button {
@@ -534,11 +561,24 @@
             }
 
             .hero {
-                padding: 128px 0 88px;
+                padding: 132px 0 96px;
+            }
+
+            .hero::before {
+                right: -240px;
+                top: -260px;
+                width: 480px;
+            }
+
+            .hero::after {
+                left: -220px;
+                bottom: -240px;
+                width: 420px;
+                height: 420px;
             }
 
             .hero__title {
-                font-size: clamp(2.75rem, 10vw, 3.6rem);
+                font-size: clamp(3rem, 11vw, 3.9rem);
             }
 
             .section {
