--- a/index.html
+++ b/index.html
@@ -99,21 +99,76 @@
         .hero {
             position: relative;
             isolation: isolate;
-            padding: clamp(180px, 24vh, 240px) 0 clamp(140px, 20vh, 200px);
-            display: grid;
-            gap: clamp(44px, 6vw, 72px);
-            justify-items: start;
+            padding: clamp(160px, 22vh, 220px) 0 clamp(120px, 18vh, 180px);
             overflow: visible;
             background: #ffffff;
         }
 
+        .hero__layout {
+            width: min(1100px, 92vw);
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: minmax(0, 0.58fr) minmax(0, 0.42fr);
+            gap: clamp(40px, 6vw, 64px);
+            align-items: center;
+        }
+
+        .hero__content {
+            display: grid;
+            gap: clamp(20px, 4vw, 32px);
+            justify-items: start;
+        }
+
         .hero__title {
-            font-size: clamp(4rem, 9vw, 5.75rem);
+            font-size: clamp(3.6rem, 8.6vw, 5.5rem);
             font-weight: 700;
             letter-spacing: -0.04em;
             line-height: 1.08;
             margin: 0;
-            max-width: 16ch;
+            max-width: 14ch;
+            text-align: left;
+        }
+
+        .hero__description {
+            margin: 0;
+            font-size: 18px;
+            color: var(--color-muted);
+            max-width: 42ch;
+            text-align: left;
+        }
+
+        .hero__form {
+            width: 100%;
+            display: grid;
+            gap: 18px;
+        }
+
+        .hero__form .button {
+            width: 100%;
+            justify-content: center;
+        }
+
+        .hero__form textarea {
+            min-height: 140px;
+        }
+
+        .hero__visual {
+            position: relative;
+        }
+
+        .hero__visual-placeholder {
+            border-radius: 32px;
+            padding: clamp(32px, 5vw, 48px);
+            background: linear-gradient(135deg, rgba(15, 111, 236, 0.12), rgba(15, 111, 236, 0.32));
+            min-height: clamp(280px, 36vw, 420px);
+            display: grid;
+            place-content: center;
+            text-align: center;
+            border: 1px solid rgba(15, 111, 236, 0.22);
+            box-shadow: 0 28px 52px rgba(15, 111, 236, 0.22);
+            color: rgba(17, 18, 22, 0.72);
+            font-weight: 600;
+            letter-spacing: -0.01em;
         }
 
         .button {
@@ -557,13 +612,15 @@
             background: #ffffff;
         }
 
-        .hero__cta {
+        .hero__content,
+        .hero__visual {
             opacity: 0;
-            transform: translateY(12px);
-            transition: opacity 0.45s ease 0.25s, transform 0.45s ease 0.25s;
+            transform: translateY(16px);
+            transition: opacity 0.55s ease, transform 0.55s ease;
         }
 
-        .fade-block.is-visible .hero__cta {
+        .fade-block.is-visible .hero__content,
+        .fade-block.is-visible .hero__visual {
             opacity: 1;
             transform: translateY(0);
         }
@@ -585,11 +642,27 @@
             }
 
             .hero {
-                padding: 132px 0 96px;
+                padding: 120px 0 80px;
+            }
+
+            .hero__layout {
+                grid-template-columns: 1fr;
+            }
+
+            .hero__content {
+                justify-items: stretch;
             }
 
             .hero__title {
-                font-size: clamp(3rem, 11vw, 3.9rem);
+                font-size: clamp(2.8rem, 10vw, 3.6rem);
+            }
+
+            .hero__description {
+                font-size: 17px;
+            }
+
+            .hero__form .button {
+                width: 100%;
             }
 
             .section {
@@ -638,9 +711,27 @@
     </header>
 
     <main id="top">
-        <section class="hero container fade-block" aria-labelledby="hero-title">
-            <h1 class="hero__title" id="hero-title">YouTube business solutions, from industry veterans.</h1>
-            <a class="button button--primary hero__cta" href="https://calendly.com/your-link" target="_blank" rel="noopener">Book a discovery call</a>
+        <section class="hero fade-block" aria-labelledby="hero-title">
+            <div class="hero__layout">
+                <div class="hero__content">
+                    <h1 class="hero__title" id="hero-title">YouTube Solutions From industry Veterans.</h1>
+                    <p class="hero__description">We offer bespoke YouTube strategies and solutions, for creators and businesses.</p>
+                    <form class="hero__form">
+                        <div class="form-field">
+                            <input id="hero-email" name="email" type="email" autocomplete="email" required placeholder=" ">
+                            <label for="hero-email">Email</label>
+                        </div>
+                        <div class="form-field">
+                            <textarea id="hero-message" name="message" placeholder=" "></textarea>
+                            <label for="hero-message">Your message (optional)</label>
+                        </div>
+                        <button type="submit" class="button button--primary">Get in touch</button>
+                    </form>
+                </div>
+                <div class="hero__visual" aria-hidden="true">
+                    <div class="hero__visual-placeholder">Placeholder for hero visual</div>
+                </div>
+            </div>
         </section>
 
         <section class="section fade-block" id="services" aria-labelledby="services-title">
